--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,21 @@
 .head {
     width: 100%;
-    background-color: #2079c7;
-    color: #2079c7;
+    background-color: #6014ca;
+    color: #6014ca;
 }
 
 h1 {
-    text-align: center;
+    text-align: right;
     font-size: 60px;
     margin: 100px 100px 0px 100px;
 }
 
 h6 {
-    text-align: center;
+    text-align: right;
+    margin-right: 100px;
     font-size: 12px;
+}
+
+.infoText {
+    align-items: center;
 }
