--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Font classes */
+/* Font styles */
 
 .special-gothic-expanded-one-regular {
     font-family: "Special Gothic Expanded One", sans-serif;
@@ -20,15 +20,31 @@
     display: none;
 }
 
-/* Layout and content classes */
+/* Layout and content styles */
 
 .me {
-    width: 400px;
-    height: 500px;
+    width: 450px;
+    height: 570px;
+    margin-left: 0px;
+    border: 0px solid #7B2CBF;
+    border-radius: 50%;
+    margin-left: 155px;
+    margin-top: 10px;
 }
 
 body {
     background-color: #240046;
+}
+
+.divider {
+    position: relative;
+    height: 24px;
+}
+
+.divider div {
+    position: absolute;
+    height: 8px;
+    width: 0;
 }
 
 .horizontalDivider {
@@ -41,7 +57,17 @@ body {
     height: 8px;
     width: 0%;
     background-color: #5a189a;
-    right: 100%;
+    right: 0;
+}
+
+.top {
+    top: 8px;
+    right: 0; 
+}
+
+.bottom {
+    top: -8px;
+    right: 0;
 }
 
 .col-sm {
@@ -51,22 +77,39 @@ body {
 h1 {
     text-align: center;
     color: white;
-    font-size: 100px;
+    font-size: 150px;
     white-space: nowrap;
+    display: inline;
 }
 
 h6 {
     color: white;
     text-align: center;
-    font-size: 25px;
+    font-size: 40px;
+}
+
+.textContainer {
+    background-color: rgba(0, 128, 0, 0);
+    padding-top: 0px;
+    margin-right: 150px;
+    align-items: center;
 }
 
 .infoText {
-    align-items: center;
-    margin-right: 100px;
-    text-align: right;
+    align-self: center;
+    margin-right: 200px;
     width: 415px;
     margin-left: 1000px;
+    background-color: rgba(255, 0, 0, 0);
+    position: relative;
+    right: 170px;
+    bottom: 170px;
+}
+
+.infoText h1 {
+    position: relative;
+    right: 90px;
+    bottom: -35px;
 }
 
 .container {
@@ -76,8 +119,8 @@ h6 {
 }
 
 .skillsTrigger {
-    width: 120px;
-    margin-left: 257px;
+    width: 60px;
+    margin-left: 270px;
 }
 
 .experienceTrigger,
@@ -87,8 +130,10 @@ h6 {
     margin-left: 200px;
 }
 
-.divider {
-    margin-left: 49%;
-    width: 8px;
-    background-color: #7B2CBF;
+.horizontalDivider div {
+    position: absolute;
+}
+
+.horizontalDivider {
+    position: relative;
 }
